--- a/templates/accounts/customer_dashboard.html
+++ b/templates/accounts/customer_dashboard.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="col-md-4 text-md-end mt-3 mt-md-0">
-                <div class="badge bg-primary bg-opacity-10 text-primary px-3 py-2 rounded-pill">
+                <div class="badge  bg-opacity-10 text-primary px-3 py-2 rounded-pill">
                     <i class="fas fa-star me-1"></i> {{ user.user_type|title }} Account
                 </div>
             </div>
